# MCP2221-DIO-CPP

./: CMakeLists.txt  README.md  main.cpp  main.h
MCP2221-DIO/: CMakeLists.txt  MCP2221-DIO.cpp  MCP2221-DIO.h
